@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-08T00:27:23Z",
+  "timestamp" : "2024-01-08T16:00:47Z",
   "count_outdated" : 64,
   "uniques_outdated" : 48,
-  "count" : 70,
-  "uniques" : 53,
+  "count" : 71,
+  "uniques" : 54,
   "clones" : [
     {
       "timestamp": "2023-12-30T00:00:00Z",
@@ -31,6 +31,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2024-01-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
